{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 14,
  "lineage": "64bff75b-34f5-d978-7c57-f8a53e96ae1d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0ca6c6b376c4e5be8",
            "owner_id": "049876562615",
            "tags": {
              "Name": "terraform-cloud-orchestrator-demo"
            },
            "vpc_id": "vpc-00891691bfde0e8c5"
          },
          "depends_on": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04696f4c08b9f5e3a",
            "owner_id": "049876562615",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ca6c6b376c4e5be8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-00891691bfde0e8c5"
          },
          "depends_on": [
            "aws_internet_gateway.demo",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd0f4e1c62adffa3",
            "route_table_id": "rtb-04696f4c08b9f5e3a",
            "subnet_id": "subnet-0b8e9806f0f99718d"
          },
          "depends_on": [
            "aws_route_table.demo",
            "aws_subnet.demo"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f5c436862e41062",
            "route_table_id": "rtb-04696f4c08b9f5e3a",
            "subnet_id": "subnet-01d7b44267b25accf"
          },
          "depends_on": [
            "aws_route_table.demo",
            "aws_subnet.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-cluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:049876562615:security-group/sg-0c45a108fdce65e48",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c45a108fdce65e48",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow workstation to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-cloud-orchestrator-demo",
            "name_prefix": null,
            "owner_id": "049876562615",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-cloud-orchestrator-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-00891691bfde0e8c5"
          },
          "depends_on": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-cluster-ingress-node-https",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-cluster-ingress-workstation-https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-1771625179",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c45a108fdce65e48",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.demo-cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-node-ingress-cluster",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-node-ingress-self",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:049876562615:subnet/subnet-0b8e9806f0f99718d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0b8e9806f0f99718d",
            "map_public_ip_on_launch": false,
            "owner_id": "049876562615",
            "tags": {
              "Name": "terraform-cloud-orchestrator-demo",
              "kubernetes.io/cluster/terraform-cloud-orchestrator-demo": "shared"
            },
            "vpc_id": "vpc-00891691bfde0e8c5"
          },
          "depends_on": [
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:049876562615:subnet/subnet-01d7b44267b25accf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-01d7b44267b25accf",
            "map_public_ip_on_launch": false,
            "owner_id": "049876562615",
            "tags": {
              "Name": "terraform-cloud-orchestrator-demo",
              "kubernetes.io/cluster/terraform-cloud-orchestrator-demo": "shared"
            },
            "vpc_id": "vpc-00891691bfde0e8c5"
          },
          "depends_on": [
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:049876562615:vpc/vpc-00891691bfde0e8c5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-015a90a3ae05d725f",
            "default_route_table_id": "rtb-04819d4ac55200f8d",
            "default_security_group_id": "sg-0c78ef2dfc0d0552b",
            "dhcp_options_id": "dopt-997d9bfc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00891691bfde0e8c5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04819d4ac55200f8d",
            "owner_id": "049876562615",
            "tags": {
              "Name": "terraform-cloud-orchestrator-demo",
              "kubernetes.io/cluster/terraform-cloud-orchestrator-demo": "shared"
            }
          }
        }
      ]
    }
  ]
}